Performance optimize censoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 
 # only support linux/g++ for now
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DRAPIDJSON_SSE42 -DSPDLOG_COMPILED_LIB -DCATCH_CONFIG_FAST_COMPILE -Wall -Wextra -Wno-unused-variable -Wno-long-long -Wno-unused-parameter -Wduplicated-cond -Wduplicated-branches -Wlogical-op -Wnull-dereference -pedantic -std=c++2a ")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DXXH_STATIC_LINKING_ONLY -DRAPIDJSON_SSE42 -DSPDLOG_COMPILED_LIB -DCATCH_CONFIG_FAST_COMPILE -Wall -Wextra -Wno-unused-variable -Wno-long-long -Wno-unused-parameter -Wduplicated-cond -Wduplicated-branches -Wlogical-op -Wnull-dereference -pedantic -std=c++2a ")
 set(CMAKE_CXX_FLAGS_DEBUG "-g3 -ggdb -Og -mavx -mavx2")
 set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG -mavx -mavx2")
 set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-g3 -ggdb -O2 -mavx -mavx2")
@@ -42,6 +42,7 @@ add_executable(lotr_benchmark ${SPDLOG_SOURCE} ${USOCKETS_SOURCE} ${PROJECT_SOUR
 
 find_library(PQXX_LIBRARY pqxx HINTS ${EXTERNAL_DIR}/libpqxx/src/.libs)
 find_library(SODIUM_LIBRARY sodium HINTS ${EXTERNAL_DIR}/libsodium/src/libsodium/.libs)
+find_library(XXHASH_LIBRARY xxhash HINTS ${EXTERNAL_DIR}/xxHash)
 
 if(NOT PQXX_LIBRARY)
     message(FATAL_ERROR "libpqxx not found")
@@ -49,6 +50,10 @@ endif()
 
 if(NOT SODIUM_LIBRARY)
     message(FATAL_ERROR "libsodium not found")
+endif()
+
+if(NOT XXHASH_LIBRARY)
+    message(FATAL_ERROR "libxxhash not found")
 endif()
 
 find_package(ZLIB REQUIRED)
@@ -64,7 +69,8 @@ include_directories("${EXTERNAL_DIR}/range-v3/include")
 include_directories("${EXTERNAL_DIR}/Catch2/single_include")
 include_directories("${ZLIB_INCLUDE_DIRS}")
 include_directories("${EXTERNAL_DIR}/libsodium/src/libsodium/include")
-
+include_directories("${EXTERNAL_DIR}/xxHash")
+include_directories("${EXTERNAL_DIR}/robin-hood-hashing/src/include")
 
 
 target_link_libraries(lotr_backend PUBLIC ${PQXX_LIBRARY} -lpq)
@@ -72,18 +78,21 @@ target_link_libraries(lotr_backend PUBLIC -lpthread -lstdc++fs)
 target_link_libraries(lotr_backend PUBLIC ${ZLIB_LIBRARIES} )
 target_link_libraries(lotr_backend PUBLIC ${OPENSSL_LIBRARIES})
 target_link_libraries(lotr_backend PUBLIC ${SODIUM_LIBRARY})
+target_link_libraries(lotr_backend PUBLIC ${XXHASH_LIBRARY})
 
 target_link_libraries(lotr_test PUBLIC ${PQXX_LIBRARY} -lpq)
 target_link_libraries(lotr_test PUBLIC -lpthread -lstdc++fs)
 target_link_libraries(lotr_test PUBLIC ${ZLIB_LIBRARIES} )
 target_link_libraries(lotr_test PUBLIC ${OPENSSL_LIBRARIES})
 target_link_libraries(lotr_test PUBLIC ${SODIUM_LIBRARY})
+target_link_libraries(lotr_test PUBLIC ${XXHASH_LIBRARY})
 
 target_link_libraries(lotr_benchmark PUBLIC ${PQXX_LIBRARY} -lpq)
 target_link_libraries(lotr_benchmark PUBLIC -lpthread -lstdc++fs)
 target_link_libraries(lotr_benchmark PUBLIC ${ZLIB_LIBRARIES} )
 target_link_libraries(lotr_benchmark PUBLIC ${OPENSSL_LIBRARIES})
 target_link_libraries(lotr_benchmark PUBLIC ${SODIUM_LIBRARY})
+target_link_libraries(lotr_benchmark PUBLIC ${XXHASH_LIBRARY})
 
 
 add_custom_command(
