Add message handling router, sigint handling and prevent profanities in usernames

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "external/robin-hood-hashing"]
 	path = external/robin-hood-hashing
 	url = https://github.com/martinus/robin-hood-hashing.git
+[submodule "external/entt"]
+	path = external/entt
+	url = https://github.com/skypjack/entt.git
