--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,7 @@
 [submodule "external/spdlog"]
 	path = external/spdlog
 	url = https://github.com/gabime/spdlog.git
+	branch = v1.x
 [submodule "external/rapidjson"]
 	path = external/rapidjson
 	url = https://github.com/Tencent/rapidjson.git
@@ -24,7 +25,7 @@
 	url = https://github.com/Cyan4973/xxHash.git
 [submodule "external/robin-hood-hashing"]
 	path = external/robin-hood-hashing
-	url = https://github.com/martinus/robin-hood-hashing.git
+	url = https://github.com/oipo/robin-hood-hashing.git
 [submodule "external/entt"]
 	path = external/entt
 	url = https://github.com/skypjack/entt.git
