First pass at global item loading

--- a/.gitmodules
+++ b/.gitmodules
@@ -32,3 +32,6 @@
 [submodule "external/yaml-cpp"]
 	path = external/yaml-cpp
 	url = https://github.com/jbeder/yaml-cpp.git
+[submodule "external/pcg-cpp"]
+	path = external/pcg-cpp
+	url = https://github.com/imneme/pcg-cpp.git
