--- a/assets/npcs/resources/flowers.yml
+++ b/assets/npcs/resources/flowers.yml
@@ -11,6 +11,10 @@
 
   skillOnKill: 1
 
+  gold:
+    min: 0
+    max: 0
+
   hp:
     min: 1
     max: 1
@@ -39,6 +43,10 @@
   level: 1
 
   skillOnKill: 1
+
+  gold:
+    min: 0
+    max: 0
 
   hp:
     min: 1
@@ -69,6 +77,10 @@
 
   skillOnKill: 1
 
+  gold:
+    min: 0
+    max: 0
+
   hp:
     min: 1
     max: 1
@@ -97,6 +109,10 @@
   level: 1
 
   skillOnKill: 1
+
+  gold:
+    min: 0
+    max: 0
 
   hp:
     min: 1
@@ -127,6 +143,10 @@
 
   skillOnKill: 1
 
+  gold:
+    min: 0
+    max: 0
+
   hp:
     min: 1
     max: 1
@@ -151,6 +171,10 @@
   level: 1
 
   skillOnKill: 1
+
+  gold:
+    min: 0
+    max: 0
 
   hp:
     min: 1
@@ -181,6 +205,10 @@
 
   skillOnKill: 1
 
+  gold:
+    min: 0
+    max: 0
+
   hp:
     min: 1
     max: 1
@@ -209,6 +237,10 @@
   level: 1
 
   skillOnKill: 1
+
+  gold:
+    min: 0
+    max: 0
 
   hp:
     min: 1
