--- a/.gitmodules
+++ b/.gitmodules
@@ -31,7 +31,7 @@
 	url = https://github.com/skypjack/entt.git
 [submodule "external/yaml-cpp"]
 	path = external/yaml-cpp
-	url = https://github.com/jbeder/yaml-cpp.git
+	url = https://github.com/Oipo/yaml-cpp.git
 [submodule "external/pcg-cpp"]
 	path = external/pcg-cpp
 	url = https://github.com/imneme/pcg-cpp.git
