--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,8 +18,8 @@ set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 
 # only support linux/g++ for now
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DXXH_STATIC_LINKING_ONLY -DRAPIDJSON_SSE42 -DSPDLOG_COMPILED_LIB -DCATCH_CONFIG_FAST_COMPILE -Wall -Wextra -Wno-unused-variable -Wno-long-long -Wno-unused-parameter -Wduplicated-cond -Wduplicated-branches -Wlogical-op -Wnull-dereference -pedantic -std=c++2a ")
-set(CMAKE_CXX_FLAGS_DEBUG "-g3 -ggdb -Og -mavx -mavx2")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DXXH_STATIC_LINKING_ONLY -DRAPIDJSON_SSE42 -DSPDLOG_COMPILED_LIB -DCATCH_CONFIG_FAST_COMPILE -DSPDLOG_NO_EXCEPTIONS -Wall -Wextra -Wno-unused-variable -Wno-long-long -Wno-unused-parameter -Wduplicated-cond -Wduplicated-branches -Wlogical-op -Wnull-dereference -pedantic -std=c++2a ")
+set(CMAKE_CXX_FLAGS_DEBUG "-g3 -ggdb -mavx -mavx2")
 set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG -mavx -mavx2")
 set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-g3 -ggdb -O2 -mavx -mavx2")
 set(CMAKE_CXX_FLAGS_MINSIZEREL "-Os -DNDEBUG -mavx -mavx2")
@@ -79,6 +79,7 @@ include_directories("${EXTERNAL_DIR}/robin-hood-hashing/src/include")
 include_directories("${EXTERNAL_DIR}/entt/src")
 include_directories("${EXTERNAL_DIR}/yaml-cpp/include")
 include_directories("${EXTERNAL_DIR}/pcg-cpp/include")
+include_directories("${EXTERNAL_DIR}/readerwriterqueue")
 
 
 target_link_libraries(lotr_backend PUBLIC ${PQXX_LIBRARY} -lpq)
