Travis stuff (expect lots of commits)

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ matrix:
     compiler: gcc
     addons:
       apt:
+        update: true
         sources:
           - ubuntu-toolchain-r-test
         packages:
