Travis stuff (expect lots of commits)

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ matrix:
       apt:
         update: true
         sources:
-          - ubuntu-toolchain-r-test
+          - sourceline: 'ppa:ubuntu-toolchain-r/test'
         packages:
           - gcc-9
           - g++-9
