Travis stuff (expect lots of commits)

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,9 @@ matrix:
     env:
       - MAKEFLAGS=-j2
     script:
+      - sudo ln -s /usr/bin/gcc-9 /usr/local/bin/gcc
+      - sudo ln -s /usr/bin/g++-9 /usr/local/bin/g++
       - gcc -v && g++ -v && cmake --version
+      - ./compile_external_release.sh
       - cmake -DCMAKE_BUILD_TYPE=Release .
       - make
