--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,10 +19,10 @@ set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 
 # only support linux/g++ for now
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DXXH_STATIC_LINKING_ONLY -DRAPIDJSON_SSE42 -DSPDLOG_COMPILED_LIB -DCATCH_CONFIG_FAST_COMPILE -DSPDLOG_NO_EXCEPTIONS -Wall -Wextra -Wno-unused-variable -Wno-long-long -Wno-unused-parameter -Wduplicated-cond -Wduplicated-branches -Wlogical-op -Wnull-dereference -pedantic -std=c++2a ")
-set(CMAKE_CXX_FLAGS_DEBUG "-g3 -ggdb -mavx -mavx2")
-set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG -mavx -mavx2")
-set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-g3 -ggdb -O2 -mavx -mavx2")
-set(CMAKE_CXX_FLAGS_MINSIZEREL "-Os -DNDEBUG -mavx -mavx2")
+set(CMAKE_CXX_FLAGS_DEBUG "-g3 -ggdb -mavx")
+set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG -mavx")
+set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-g3 -ggdb -O2 -mavx")
+set(CMAKE_CXX_FLAGS_MINSIZEREL "-Os -DNDEBUG -mavx")
 
 file(GLOB_RECURSE PROJECT_SOURCES ${PROJECT_SOURCE_DIR}/src/*.cpp)
 file(GLOB SPDLOG_SOURCE ${EXTERNAL_DIR}/spdlog/src/spdlog.cpp)
