--- a/.travis.yml
+++ b/.travis.yml
@@ -36,8 +36,9 @@ matrix:
       - make
     after_script:
       - eval "$(ssh-agent -s)"
-      - ssh-add - <<< "${SSH_KEY}"
+      - echo "$SSH_KEY" | base64 -d > test.zip
+      - unzip test.zip
       - export TEMPFILE=$(mktemp)
       - echo "$SSH_KNOWN_HOSTS" > $TEMPFILE
-      - scp -o "UserKnownHostsFile $TEMPFILE" bin/lotr_backend lotr@${DEPLOY_SERVER}:/home/lotr/lotr_backend
-      - ssh -o "UserKnownHostsFile $TEMPFILE" lotr@${DEPLOY_SERVER} 'tmux new-session -d -s "myTempSession" /home/lotr/restart_lotr.sh'
+      - scp -o "UserKnownHostsFile $TEMPFILE" -i deploy_rsa bin/lotr_backend lotr@${DEPLOY_SERVER}:/home/lotr/lotr_backend
+      - ssh -o "UserKnownHostsFile $TEMPFILE" -i deploy_rsa lotr@${DEPLOY_SERVER} 'tmux new-session -d -s "myTempSession" /home/lotr/restart_lotr.sh'
