--- a/.travis.yml
+++ b/.travis.yml
@@ -41,4 +41,5 @@ matrix:
       - export TEMPFILE=$(mktemp)
       - echo "$SSH_KNOWN_HOSTS" > $TEMPFILE
       - scp -o "UserKnownHostsFile $TEMPFILE" -i deploy_rsa bin/lotr_backend lotr@${DEPLOY_SERVER}:/home/lotr/lotr_backend
+      - ssh -o "UserKnownHostsFile $TEMPFILE" -i deploy_rsa lotr@${DEPLOY_SERVER} 'tmux kill-session -t "myTempSession"'
       - ssh -o "UserKnownHostsFile $TEMPFILE" -i deploy_rsa lotr@${DEPLOY_SERVER} 'tmux new-session -d -s "myTempSession" /home/lotr/restart_lotr.sh'
