--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,9 @@ matrix:
     script:
       - gcc -v && g++ -v && cmake --version
       - ./compile_external_release.sh
-      - cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo .
+      - CMAKE_CXX_FLAGS="-DEXCLUDE_PSQL_TESTS" cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo .
       - make
+      - echo '{ "ADDRESS": "localhost", "PORT": 8080, "DEBUG_LEVEL": "trace", "CONNECTION_STRING": "postgres://lotr:lotr@localhost/lotr", "TICK_LENGTH": 100, "LOG_TICK_TIMES": true }' &> bin/config.json
       - bin/lotr_test
     after_script:
       - eval "$(ssh-agent -s)"
