--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ matrix:
     script:
       - gcc -v && g++ -v && cmake --version
       - ./compile_external_release.sh
-      - CMAKE_CXX_FLAGS="-DEXCLUDE_PSQL_TESTS" cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo .
+      - cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_CXX_FLAGS="-DEXCLUDE_PSQL_TESTS" .
       - make
       - echo '{ "ADDRESS":"localhost", "PORT":8080, "DEBUG_LEVEL":"trace", "CONNECTION_STRING":"postgres://@localhost/", "TICK_LENGTH":100, "LOG_TICK_TIMES":true }' &> bin/config.json
       - bin/lotr_test
