--- a/.gitmodules
+++ b/.gitmodules
@@ -40,4 +40,4 @@
 	url = https://github.com/cameron314/readerwriterqueue.git
 [submodule "assets"]
 	path = assets
-	url = git@github.com:LandOfTheRair/Content.git
+	url = https://github.com/LandOfTheRair/Content.git
